Update tox matrix

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36}-d{20}
+envlist = py{36}-d{110,111,20}
 envtmpdir={toxinidir}/build/{envname}/tmp
 envlogdir={toxinidir}/build/{envname}/log
 
@@ -29,6 +29,8 @@ setenv =
     PYTHONPATH={toxinidir}/src
 deps =
      pipenv
+     d110: django>=1.10,<1.11
+     d111: django>=1.11,<1.12
      d20: django>=2.0,<2.1
      dev: git+git://github.com/django/django.git#egg=django
 
