--- a/tests/.coveragerc
+++ b/tests/.coveragerc
@@ -1,31 +1,13 @@
 [run]
-branch = True
-source = unicef_attachments
-include =
+branch = true
+source = etools_attachment
 
-omit =  **/__init__.py
-        **/migrations/**
-        **/settings/*.py
-        **/tests/**
+[report]
+fail_under = 95
+ignore_errors = True
+exclude_lines =
+   pragma: no cover
 
 [html]
 directory = build/coverage
-
-[report]
-# Regexes for lines to exclude from consideration
-exclude_lines =
-    # Have to re-enable the standard pragma
-    pragma: no cover
-    pragma: no-cover
-    # Don't complain about missing debug-only code:
-    def __repr__
-    if self\.debug
-    # Don't complain if tests don't hit defensive assertion code:
-    raise AssertionError
-    raise NotImplementedError
-    except ImportError
-    # Don't complain if non-runnable code isn't run:
-    #if 0:
-    if __name__ == .__main__.:
-    except ValidationError
-    except Exception
+title = UNICEF Attachments Coverage report
