--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ django = "*"
 django-model-utils = "*"
 django-ordered-model = "*"
 unicef-restlib = ">=0.2.0"
+drf-querystringfilter = "*"
 
 [dev-packages]
 "flake8" = "*"
