Add SafeFileValidator to single attachment file field

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-model-utils = "*"
 django-ordered-model = "*"
 unicef-restlib = ">=0.2.0"
 drf-querystringfilter = "*"
+python-magic = "*"
 
 [dev-packages]
 "flake8" = "*"
