--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-model-utils = "*"
 unicef-restlib = ">=0.2.0"
 drf-querystringfilter = "*"
 python-magic = "*"
+django-ordered-model = "*"
 
 [dev-packages]
 "flake8" = "*"
