Update postgres image in github workflow

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -6,7 +6,7 @@ jobs:
     container: python:latest
     services:
       postgres:
-        image: postgres:9.5-alpine
+        image: postgres:9.5
       options: >-
         --health-cmd pg_isready
         --health-interval 10s
