--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -26,3 +26,5 @@ jobs:
         run: pip install tox
       - name: Run Tox
         run: tox -e "py${{ matrix.python-version }}-d${{ matrix.django-version }}" -- py.test tests -v
+        env:
+          DATABASE_HOST: postgres
