Pass in database env vars to tox

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ addopts =
         --echo-attr django.conf.settings.DATABASES.default.PORT
 
 [testenv]
-passenv = PYTHONDONTWRITEBYTECODE USER PYTHONPATH
+passenv = PYTHONDONTWRITEBYTECODE USER PYTHONPATH DATABASE_HOST DATABASE_NAME
 setenv =
     PYTHONDONTWRITEBYTECODE=true
     PYTHONPATH={toxinidir}/src
