Pass in db password in github workflow

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ addopts =
         --echo-attr django.conf.settings.DATABASES.default.PORT
 
 [testenv]
-passenv = PYTHONDONTWRITEBYTECODE USER PYTHONPATH DATABASE_HOST DATABASE_NAME
+passenv = PYTHONDONTWRITEBYTECODE USER PYTHONPATH DATABASE_HOST DATABASE_NAME DATABASE_PASSWORD
 setenv =
     PYTHONDONTWRITEBYTECODE=true
     PYTHONPATH={toxinidir}/src
