--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ parameters:
 jobs:
   build:
     docker:
-      - image: circleci/python:3.9
+      - image: cimg/python:3.11
       - image: circleci/postgres:12
         environment:
           POSTGRES_USER: postgres
@@ -38,7 +38,7 @@ jobs:
           destination: python_app
   release:
     docker:
-      - image: circleci/python:3.9
+      - image: cimg/python:3.11
     steps:
       - checkout
       - restore_cache:
