--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "unicef-attachments"
 dynamic = ["version"]
 description = "Django package that handles attachments"
 readme = "README.rst"
-license = "Apache 2 License"
+license = "Apache-2.0 OR MIT"
 authors = [
     { name = "UNICEF", email = "dev@unicef.org" },
 ]
@@ -52,7 +52,7 @@ test = [
 Homepage = "https://github.com/unicef/unicef-attachments"
 
 [tool.hatch.version]
-path = "unicef_attachments/__init__.py"
+path = "src/unicef_attachments/__init__.py"
 
 [tool.hatch.build.targets.sdist]
 include = [
